fixed weird alignment issues

--- a/wp-content/themes/techgirlz/style.css
+++ b/wp-content/themes/techgirlz/style.css
@@ -31,33 +31,30 @@ body {
 /*--------------------------------------------------------------
 Home Page Elements
 --------------------------------------------------------------*/
-
-.landing {
-	padding: 0;
-	margin: 0;
-	text-align: left;
-	color: #000000;
-	background: transparent;
-	border-radius: 0;
-	height: 470px!important;
-	font-size: 30px;
+.home-landing {
+	margin-top: 91px;
+	width: 100%;
+	height: 390px;
+	z-index: -1;
+	background-repeat:no-repeat;
+	background-size: cover;
+	display: block;
 }
 
-.landing h1 {
+.home-landing h1 {
 	font-size: 60px;
-	font-weight: 700;
+	font-weight: 600;
 	line-height: 1.17;
 	letter-spacing: 0;
-	margin: 180px 0 20px 60px;
-	height: 150px;
+	margin: 130px 0 20px 60px;
 	letter-spacing: -1px;
 	font-family: Lora;
 	color: #ffffff;
 }
 
-.landing .fa-3x {
+.home-landing .fa-5x {
   color:white;
-	margin: 240px 0 20px 500px;
+	margin: 165px 0px 0 600px;
 }
 
 @media (max-width: 60em) {
@@ -78,86 +75,6 @@ Home Page Elements
 		font-size: 25px;
 		width: 80%
 	}
-}
-
-.landing .bg {
-	position: absolute;
-	top: 121px;
-	left: 0;
-	width: 100%;
-	height: 450px;
-	z-index: -1;
-	background-repeat:no-repeat;
-	background-size: cover;
-}
-
-.landing h1 > span {
-	display: block;
-	max-height: 164px;
-}
-
-.landing .text-fit-inner {
-	color: #333;
-}
-
-.landing .lead {
-	text-transform: none;
-	height: 60px;
-	font-size: 33px;
-}
-
-.landing .btn {
-	background-color: #ffffff;
-	margin: 260px 0 20px 200px;
-	height: 60px;
-	width: 200px;
-}
-
-.landing .box {
-	text-align: center;
-	padding: 0;
-	margin: auto;
-	background: transparent;
-	font-family: 'Lora';
-}
-
-.landing .box .box-inner {
-	display: table;
-	width: 100%;
-	height: 100%;
-}
-
-.landing .box .box-inner>div {
-	display: table-cell;
-	vertical-align: middle;
-}
-
-.landing .box span {
-	display: block;
-	line-height: 1.2em;
-}
-
-.landing i[class^=icon] {
-	position: absolute;
-	top: 50%;
-	left: 55px;
-	margin-top: -18px;
-	font-size: 36px;
-}
-
-.landing .box .sub {
-	font-size: 16px;
-	font-weight: 500;
-}
-
-.landing .box .title {
-	font-size: 40px;
-	text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
-}
-
-.landing .box .desc {
-	font-size: 35px;
-	text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
 }
 
 .columnDonateTime {
@@ -242,31 +159,13 @@ Pages
 	padding: 60px 120px;
 }
 
-.page-landing {
-	display: block;
-	padding: 0;
-	margin: 0;
-	text-align: center;
-	color: #000000;
-	background: transparent;
-	border-radius: 0;
-	height: 319px;
-	font-size: 30px;
-}
-
 .page-landing h1 {
 	font-size: 40px;
-	font-weight: 700;
-	line-height: 1.17;
-	padding: 10px 10px 10px 10px;
-	margin: 90px 0;
-	letter-spacing: 0;
-	height: 100px;
-	letter-spacing: -1px;
+	padding: 100px 0;
 	font-family: Open Sans;
 	text-transform: uppercase;
 	color: #ffffff;
-	display: block;
+	text-align: center;
 }
 
 @media (max-width: 60em) {
@@ -278,21 +177,17 @@ Pages
 @media (max-width: 37.5em) {
 	.page-landing h1 {
 		font-size: 30px;
-		width: 80%;
 	}
 }
 
 @media (max-width: 30em) {
 	.page-landing h1 {
 		font-size: 25px;
-		width: 80%
 	}
 }
 
-.page-landing .bg {
-	position: absolute;
-	top: 0px;
-	left: 0;
+.page-landing {
+	margin-top: 91px;
 	width: 100%;
 	height: 240px;
 	z-index: -1;
@@ -302,9 +197,7 @@ Pages
 }
 
 .page-landing .topArea {
-	position: absolute;
-	top: 121px;
-	left: 0;
+	margin-top: 91px;
 	width: 100%;
 	height: 240px;
 	background-color: rgba(0, 0, 0, 0.3);
@@ -369,15 +262,13 @@ Pages
 }
 
 .staff-page-landing {
+	margin-top: 91px;
+	width: 100%;
+	height: 300px;
+	z-index: -1;
+	background-repeat:no-repeat;
+	background-size: cover;
 	display: block;
-	padding: 0;
-	margin: 0;
-	text-align: center;
-	color: #000000;
-	background: transparent;
-	border-radius: 0;
-	height: 380px;
-	font-size: 30px;
 }
 
 .staff-page-landing h1 {
@@ -428,22 +319,8 @@ Pages
 	}
 }
 
-.staff-page-landing .bg {
-	position: absolute;
-	top: 0px;
-	left: 0;
-	width: 100%;
-	height: 300px;
-	z-index: -1;
-	background-repeat:no-repeat;
-	background-size: cover;
-	display: block;
-}
-
 .staff-page-landing .topArea {
-	position: absolute;
-	top: 121px;
-	left: 0;
+	margin-top: 91px;
 	width: 100%;
 	height: 300px;
 	background-color: rgba(0, 0, 0, 0.3);
@@ -459,8 +336,9 @@ Pages
 	-o-border-radius: 150px;
 	border-radius: 150%;
 	border: 9px solid #e06287;
-	margin: 45px 0;
+	margin: 55px 40%;
 	z-index: -1;
+
 }
 
 .staff-circle-small img {
